# subtitles-transcript

./: .env.example  .gitignore  Aptfile  Dockerfile  README.md  fly.toml  fly.toml.bak  main.py  pyproject.toml  uswgi.ini  uwsgi.ini
errors/: error.py
providers/: __init__.py  firework.py  gemini.py  openai.py  openrouter.py
