[tool.poetry]
name = "subtitles-transcript"
version = "0.1.0"
description = ""
authors = ["dongnt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
loguru = "^0.7.3"
flask-cors = "^5.0.0"
python-dotenv = "^1.0.1"
m3u8 = "^6.0.0"
fireworks-ai = "^0.15.11"
requests = "^2.32.3"
aiohttp = "^3.11.11"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
